# canal

./: .dir-locals.el  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Canal.cpp  Command.h  CommandBacktrace.cpp  CommandBacktrace.h  CommandBreak.cpp  CommandBreak.h  CommandContinue.cpp  CommandFile.cpp  CommandFile.h  CommandFinish.cpp  CommandHelp.cpp  CommandHelp.h  CommandInfo.cpp  CommandInfo.h  CommandNext.cpp  CommandNext.h  CommandPrint.cpp  CommandPrint.h  CommandPwd.h  CommandQuit.cpp  CommandRun.cpp  CommandRun.h  CommandShow.h  CommandStart.cpp  CommandStep.cpp  Commands.cpp  Commands.h  FindClang.cmake  FindLLVM.cmake  FindLibElf.cmake  FindReadline.cmake  LICENSE  Makefile.am  Makefile.in  (+16 more)
docs/: Makefile.am  Makefile.in  canal.tex  doxygen-lib-html.conf  doxygen-lib.conf  doxygen-tool.conf  doxygen.conf  doxygen.intro  empty.tex
docs/galois/: README  galois.dtx  galois.ins
lib/: .ArrayUtils.cpp.swp  .Constructors.cpp.swp  APIntUtils.cpp  APIntUtils.h  AbstractArray.h  AbstractContainer.h  AbstractInteger.h  AbstractPointer.cpp  AbstractPointer.h  AbstractReal.h  AbstractStructure.h  AbstractValue.cpp  AbstractValue.h  Array.cpp  Array.h  ArrayExactLimitedSize.cpp  ArrayExactLimitedSize.h  ArrayExactSize.cpp  ArrayExactSize.h  ArrayInterface.cpp  ArrayInterface.h  ArraySingleItem.cpp  ArraySingleItem.h  ArrayStringPrefix.cpp  ArrayStringPrefix.h  ArrayStringSuffix.cpp  ArrayStringSuffix.h  ArrayStringTrie.cpp  ArrayStringTrie.h  ArrayUtils.cpp  ArrayUtils.h  CMakeLists.txt  COW.h  Callbacks.h  Config.h.in  ConfigAutotools.h.in  ConfigCMake.h.in  Constant.cpp  Constant.h  Constructors.cpp  (+137 more)
m4/: aclocal.m4  canal.m4
tests/: 0-numeric.c  1-pointer.c  2-string.c  3-pointer.c  AbstractPointerTest.cpp  AbstractValue.at  ArrayExactSizeTest.cpp  ArraySingleItemTest.cpp  ArrayStringPrefixTest.cpp  ArrayStringSuffixTest.cpp  ArrayStringTrieTest.cpp  CMakeLists.txt  COWTest.cpp  FieldMinMaxTest.cpp  FloatIntervalTest.cpp  IntegerBitfieldTest.cpp  IntegerEnumerationTest.cpp  IntegerIntervalTest.cpp  IntegerSetTest.cpp  InterpreterTest.cpp  Makefile.am  Makefile.in  MergeTest.cpp  OperationalInterpreter.at  OperationalInterpreterTest.cpp  PointerTest.cpp  ProductMessageTest.cpp  ProductVectorTest.cpp  SuperPtrTest.cpp  Value.at  atlocal.in  chroot.c  download_script  file_test.sh  local.at  numeric0.c  package.m4  pointer0.c  script_28  script_31  (+4 more)
tests/coreutils/: CMakeLists.txt  sleep.c  true.c  wc.c
tests/download scripts/: script_29  script_30
tests/fixpoint/: 0.c  0.ll.test  1.c  1.c.test
tests/integration/: Makefile.am  Makefile.in
tests/unit/: CMakeLists.txt  ICMPTest.cpp  IntegerIntervalTest.cpp  IntegerOperationsTest.cpp  IntegerRangeTest.cpp  InterpreterTest.cpp  Makefile.am  Makefile.in  OperationsTest.cpp  PointerTest.cpp  SuperPtrTest.cpp
tool/: CMakeLists.txt  Canal.cpp  Command.cpp  Command.h  CommandBacktrace.cpp  CommandBreak.cpp  CommandCd.cpp  CommandCd.h  CommandContinue.cpp  CommandContinue.h  CommandDump.cpp  CommandDump.h  CommandFile.cpp  CommandFile.h  CommandFinish.cpp  CommandFinish.h  CommandHelp.cpp  CommandHelp.h  CommandInfo.cpp  CommandInfo.h  CommandNext.cpp  CommandPrint.cpp  CommandPrint.h  CommandPwd.cpp  CommandQuit.cpp  CommandQuit.h  CommandRun.cpp  CommandSet.cpp  CommandSet.h  CommandShell.cpp  CommandShell.h  CommandShow.cpp  CommandShow.h  CommandStart.cpp  CommandStart.h  CommandStep.cpp  CommandStep.h  Commands.cpp  Commands.h  IteratorCallback.cpp  (+14 more)
wrappers/: Makefile.am  Makefile.in  args.py  config.py.in  extract-llvm  g++  gcc  ld
