lib_LTLIBRARIES = libcanal.la
libcanal_la_SOURCES = \
	APIntUtils.cpp \
	APIntUtils.h \
	ArrayExactSize.cpp \
	ArrayExactSize.h \
	ArrayInterface.cpp \
	ArrayInterface.h \
	ArraySingleItem.cpp \
	ArraySingleItem.h \
	ArrayStringPrefix.cpp \
	ArrayStringPrefix.h \
	Constructors.cpp \
	Constructors.h \
	Domain.cpp \
	Domain.h \
	Environment.cpp \
	Environment.h \
	FloatInterval.cpp \
	FloatInterval.h \
	FloatUtils.cpp \
	FloatUtils.h \
	IntegerBitfield.cpp \
	IntegerBitfield.h \
	IntegerContainer.cpp \
	IntegerContainer.h \
	IntegerEnumeration.cpp \
	IntegerEnumeration.h \
	IntegerInterval.cpp \
	IntegerInterval.h \
	InterpreterBasicBlock.cpp \
	InterpreterBasicBlock.h \
	InterpreterFunction.cpp \
	InterpreterFunction.h \
	Interpreter.cpp \
	Interpreter.h \
	InterpreterIterator.cpp \
	InterpreterIterator.h \
	InterpreterIteratorCallback.h \
	InterpreterModule.cpp \
	InterpreterModule.h \
	InterpreterOperationsCallback.cpp \
	InterpreterOperationsCallback.h \
	Operations.cpp \
	Operations.h \
	OperationsCallback.h \
	Pointer.cpp \
	Pointer.h \
	PointerTarget.cpp \
	PointerTarget.h \
	PointerUtils.cpp \
	PointerUtils.h \
	Prereq.h \
	SlotTracker.cpp \
	SlotTracker.h \
	State.cpp \
	State.h \
	StateMap.cpp \
	StateMap.h \
	Structure.cpp \
	Structure.h \
	Utils.cpp \
	Utils.h \
	VariableArguments.cpp \
	VariableArguments.h \
	WideningDataInterface.h \
	WideningDataIterationCount.cpp \
	WideningDataIterationCount.h \
	WideningInterface.h \
	WideningManager.cpp \
	WideningManager.h \
	WideningNumericalInfinity.cpp \
	WideningNumericalInfinity.h \
	WideningPointers.cpp \
	WideningPointers.h

libcanal_la_CXXFLAGS = $(LLVM_CFLAGS)
libcanal_la_LDFLAGS = $(LLVM_LDFLAGS) $(LLVM_LIBS) -version-info 0:0:0
